--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/telegram_task_bot
+spring.datasource.url=jdbc:postgresql://localhost:5432/telegram_bot
 spring.datasource.username=user
 spring.datasource.password=1234
 telegram.bot.token=6265004882:AAEQiWJBY7LLlF8UUi8ht07EaoTTOPlNBXQ
